# unpin-readme

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/workflows/: release.yml  unpin-readme.yml
src/: fetch.rs  main.rs  readurl.rs  render.rs
